refactor: Complete OAuth 2.1 SSO integration with standard authorization code flow
## Overview
Completed comprehensive OAuth 2.1 SSO integration across the entire application stack:
- Admin Portal (Next.js + React)
- OAuth Service (Rust/Axum)
- Pingora Proxy (Rust/Pingora)

## Key Changes

### 1. OAuth 2.1 Standard Authorization Code Flow with PKCE
- ✅ Implemented standard OAuth 2.1 authorization code grant (RFC 6749 + RFC 7636)
- ✅ Full PKCE (Proof Key for Code Exchange) support
- ✅ State parameter for CSRF protection
- ✅ Nonce support for OpenID Connect

### 2. Admin Portal (Next.js)
- **middleware.ts**: Auto-initiates OAuth flow for unauthenticated access
  - Generates PKCE parameters (state, code_verifier, code_challenge)
  - Stores parameters securely in httpOnly cookies
  - Protects routes with automatic redirects

- **Login Page**: Complete redesign for OAuth integration
  - Displays dynamic prompts based on flow context
  - Passes all query parameters to maintain session state

- **Username-Password Form**: Simplified form submission
  - Direct form POST to OAuth service
  - Uses standard form submission for cookie handling
  - Automatic parameter forwarding via HiddenFields

- **Auth Provider**: Session management integration
  - Token storage and retrieval
  - Automatic token refresh
  - Session validation

### 3. OAuth Service (Rust/Axum)
- **POST /api/v2/auth/login**: Browser-based login endpoint
  - Form submission handler
  - Session token (httpOnly) cookie generation
  - Automatic redirect back to authorize flow

- **GET /api/v2/oauth/authorize**: OAuth authorize endpoint
  - Smart redirect for unauthenticated users
  - Preserves all authorization parameters
  - PKCE validation

- **POST /api/v2/oauth/token**: Token exchange endpoint
  - Authorization code exchange with PKCE verification
  - Refresh token handling
  - Client credentials grant support

- **GET /api/v2/oauth/userinfo**: Protected user info endpoint
  - JWT validation and introspection
 

--- a/apps/admin-portal/package.json
+++ b/apps/admin-portal/package.json
@@ -17,6 +17,13 @@
     "test:e2e:ci": "playwright test --reporter=json",
     "test:e2e:full": "../../scripts/test-e2e.sh",
     "test:e2e:integration": "playwright test tests/e2e/oauth2.1-flow.spec.ts",
+    "test:oauth": "./run-oauth-e2e-tests.sh",
+    "test:oauth:headed": "./run-oauth-e2e-tests.sh --headed",
+    "test:oauth:debug": "./run-oauth-e2e-tests.sh --debug",
+    "test:oauth:ui": "./run-oauth-e2e-tests.sh --ui",
+    "test:oauth:skip-start": "PLAYWRIGHT_SKIP_SERVER_START=1 playwright test tests/e2e/oauth-client-flow.spec.ts",
+    "test:oauth:suite1": "PLAYWRIGHT_SKIP_SERVER_START=1 playwright test tests/e2e/oauth-client-flow.spec.ts -g 'Suite 1'",
+    "test:oauth:suite5": "PLAYWRIGHT_SKIP_SERVER_START=1 playwright test tests/e2e/oauth-client-flow.spec.ts -g 'Suite 5'",
     "playwright:install": "playwright install chromium"
   },
   "dependencies": {
