--- a/apps/oauth-service-rust/Cargo.toml
+++ b/apps/oauth-service-rust/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0"
 argon2 = "0.5"
 async-trait = "0.1"
 axum = "0.7"
+axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
 base64 = "0.21"
 bcrypt = "0.15"
 chrono = { version = "0.4", features = ["serde"] }
@@ -19,6 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
 thiserror = "1.0"
+time = "0.3"
 tokio = { version = "1", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
 tower_governor = { version = "0.8", features = ["axum"] }
